Bug 347769 - No shortcut for toggling Vi Input Mode in Kate
Summary: No shortcut for toggling Vi Input Mode in Kate
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: Vi Input Mode (other bugs)
Version First Reported In: 5.0.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 351929 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-15 16:18 UTC by Jan Keith Darunday
Modified: 2015-10-11 08:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Keith Darunday 2015-05-15 16:18:03 UTC
There used to be a shortcut that can be configured in Settings > Configure Shortcuts in kate that allows a user to switch between the Vi Input Mode and the Normal Mode and now this is missing. If I recall correctly, it uses Shift+Control+V by default.

Reproducible: Always

Steps to Reproduce:
1. Open Kate.
2. Open Settings > Configure Shortcuts.
3. Search for "input mode" or "toggle"

Actual Results:  
No results related to toggling the Vi Input Mode appears.

Expected Results:  
I should be able to set a shortcut for toggling the Vi Input Mode.
Comment 1 Michal Humpula 2015-10-10 21:35:42 UTC
*** Bug 351929 has been marked as a duplicate of this bug. ***
Comment 2 Michal Humpula 2015-10-11 08:01:24 UTC
Git commit 60c59becf13eb35e7dc558e0dc7a643260910c1b by Michal Humpula.
Committed on 11/10/2015 at 08:00.
Pushed by michalhumpula into branch 'master'.

add input mode switch shortcut
REVIEW: 125592

M  +13   -0    src/view/kateview.cpp
M  +1    -0    src/view/kateview.h

http://commits.kde.org/ktexteditor/60c59becf13eb35e7dc558e0dc7a643260910c1b