add input mode switch shortcut

BUG: 347769
REVIEW: 125592